@@ -9,8 +9,8 @@ GtkTextView widget.  Right-clicking a misspelled word pops up a menu of
 suggested replacements.  
 
 GtkSpell is a library, to be used by your software.
-GtkSpell depends on GTK+ 2.0 (of course), and also on Kevin Atkinson's pspell
-library, which can be found at http://aspell.net .
+GtkSpell depends on GTK+ 2.0 (of course), and also on Enchant
+library, which can be found at http://www.abisource.com/projects/enchant/ .
 
 For more information, see http://gtkspell.sf.net .
 
